SQLite database for API data caching, Points panel with point details including Google StreetView embed

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ MAPBOX_ACCESS_TOKEN=sk.your_secret_mapbox_token_here
 # Enable "Geocoding API" at https://console.cloud.google.com/
 GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
+# Public Google Maps key — client-side only, used for the Street View embed.
+# Can be the same key as above (restricted by HTTP referrer).
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
 # MapQuest API key — fallback geocoder if Google is unavailable.
 # Get one free at https://developer.mapquest.com/
 MAPQUEST_API_KEY=your_mapquest_api_key_here
