--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,11 @@ yarn-error.log*
 # vercel
 .vercel
 
+# local database
+/data/*.db
+/data/*.db-wal
+/data/*.db-shm
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
