--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@types/mapbox-gl": "^3.4.1",
+    "better-sqlite3": "^12.6.2",
     "mapbox-gl": "^3.19.0",
     "next": "16.1.6",
     "react": "19.2.3",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
