--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,9 @@ NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 # MapQuest API key — fallback geocoder if Google is unavailable.
 # Get one free at https://developer.mapquest.com/
 MAPQUEST_API_KEY=your_mapquest_api_key_here
+
+# ── OpenSky Network ──────────────────────────────────────────────────────────
+# Credentials for authenticated OpenSky Network API access (higher rate limits).
+# Register at https://opensky-network.org/
+OPENSKY_CLIENT_ID=your_opensky_client_id_here
+OPENSKY_CLIENT_SECRET=your_opensky_client_secret_here
