Advanced flight route data retrieval, flight route visualization, sort flights by altitude and speed

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,8 @@ MAPQUEST_API_KEY=your_mapquest_api_key_here
 # Register at https://opensky-network.org/
 OPENSKY_CLIENT_ID=your_opensky_client_id_here
 OPENSKY_CLIENT_SECRET=your_opensky_client_secret_here
+
+# ── SerpAPI (Flight Route Lookup) ────────────────────────────────────────────
+# Used to look up flight origin/destination airports via Google search.
+# Get a key at https://serpapi.com/
+SERPAPI_API_KEY=your_serpapi_api_key_here
